# usbbluetooth

./: .gitignore  Hacking Bluetooth the Easy way with ESP32 HCI Commands and hidden features.url  NVD - CVE-2025-27840.url  README.md  Talks-2025_RootedCon_BluetoothTools.pdf at main · TarlogicSecurity-Talks.url  antoniovazquezblanco-usbbluetooth- Take full control of your USB Bluetooth controllers!.url  meson.build
.github/workflows/: build.yml
doc/: API_C.md  API_CSharp.md  API_Python.md  README.md
package/: meson.build
package/windows/: meson.build
src/: meson.build
src/bindings/: meson.build
src/bindings/csharp/: .gitignore  UsbBluetooth.sln  UsbBluetoothDevice.cs  UsbBluetoothManager.cs  UsbBluetoothStatus.cs  UsbBluetoothWrapper.cs  meson.build
src/bindings/csharp/UsbBluetooth/: UsbBluetooth.csproj  UsbBluetoothDevice.cs  UsbBluetoothLogLevel.cs  UsbBluetoothManager.cs  UsbBluetoothStatus.cs  UsbBluetoothWrapper.cs
src/bindings/csharp/UsbBluetoothTest/: UnitTest1.cs  UsbBluetoothTest.csproj
src/bindings/python/: .gitignore  MANIFEST.in  meson.build  pyproject.toml
src/bindings/python/usbbluetooth/: __init__.py  _c_library.py  core.py  log.py
src/libusbbluetooth/: meson.build  usbbluetooth.def  usbbluetooth.h  usbbluetooth_api.h  usbbluetooth_core.c  usbbluetooth_core.h  usbbluetooth_device.c  usbbluetooth_device.h  usbbluetooth_err.c  usbbluetooth_err.h  usbbluetooth_io.c  usbbluetooth_io.h  usbbluetooth_log.c  usbbluetooth_log.h  utils.c  utils.h
src/usbbt/: cmd_list.c  cmd_list.h  cmd_reset.c  cmd_reset.h  main.c  meson.build
subprojects/: argtable3.wrap  cwalk.wrap  libusb.wrap
subprojects/packagefiles/argtable3/: meson.build
